# fastapi-service

./: .env  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_tables.py
src/: app.py  config.py
src/auth/: api_key.py  dependencies.py
src/database/: __init__.py  connection.py  repository.py
src/info/routers/: info.py
src/info/schemas/: info.py
src/things/: dependencies.py
src/things/repositories/: things_postgres_repository.py
src/things/routers/: things.py
src/things/schemas/: things.py
src/things/services/: things.py
tests/integration/: conftest.py  test_things.py
tests/unit/: test_info_router.py  test_things_repository.py
